name:                env-extractor
version:             0.1.0.0
synopsis:            library for extracting env variables
description:         read your configuration from environment variables using applicative functors
license:             BSD3
license-file:        LICENSE
author:              aidan coyne
maintainer:          raptros.v76@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://github.com/raptros/env-extractor
-- extra-source-files:  

library
  exposed-modules:     
    System.Environment.Extract
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.7 && <4.8,
    unordered-containers == 0.2.*,
    semigroups == 0.15.*
                    
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -Wall
        
source-repository head
  type:     git
  location: git://github.com/raptros/env-extractor.git
